tests/haste_package_subpath_vs_module_incremental/haste_package_subpath_vs_module_incremental.exp
'package/sub' does not resolve:
Error ----------------------------------------------------------------------------------------------------- test.js:3:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   3| import sub from 'package/sub';
                      ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test2.js:5:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   5| import sub from 'package/sub';
                      ^^^^^^^^^^^^^



Found 2 errors

duplicate provider:
Error ----------------------------------------------------------------------------------------- package/package.json:1:1

Duplicate module provider for `package`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   package/package.json:1:1
   1| {
      

References:
   package.js:1:1
   1| /**
       [1]


Error ----------------------------------------------------------------------------------------------------- test.js:3:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   3| import sub from 'package/sub';
                      ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test2.js:5:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   5| import sub from 'package/sub';
                      ^^^^^^^^^^^^^



Found 3 errors

'package/sub' module resolves to package:
Error ------------------------------------------------------------------------------------------------------ test.js:4:1

Cannot cast `sub` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:4:1
   4| sub as string;
      ^^^

References:
   package/sub.js:3:16
   3| export default 123;
                     ^^^ [1]
   test.js:4:8
   4| sub as string;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:6:1

Cannot cast `sub` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test2.js:6:1
   6| sub as string;
      ^^^

References:
   package/sub.js:3:16
   3| export default 123;
                     ^^^ [1]
   test2.js:6:8
   6| sub as string;
             ^^^^^^ [2]



Found 2 errors

'package/sub' does not resolve again:
Error ----------------------------------------------------------------------------------------------------- test.js:3:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   3| import sub from 'package/sub';
                      ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test2.js:5:17

Cannot resolve module `package/sub`. [cannot-resolve-module]

   5| import sub from 'package/sub';
                      ^^^^^^^^^^^^^



Found 2 errors
